2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Access_Card__c.field-meta.xml
<CustomField>
    <fullName>Access_Card__c</fullName>
    <label>Access Card</label>
    <length>99</length>
    <type>Text</type>
</CustomField>