2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Address_HT__c.field-meta.xml
<CustomField>
    <fullName>Address_HT__c</fullName>
    <label>Address:</label>
    <type>TextArea</type>
</CustomField>