2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Age_Today__c.field-meta.xml
<CustomField>
    <fullName>Age_Today__c</fullName>
    <formula>IF(MONTH(TODAY())&gt;MONTH(Birthdate),YEAR(TODAY())-YEAR(Birthdate),
IF(AND(MONTH(TODAY())=MONTH(Birthdate),DAY(TODAY())&gt;=DAY(Birthdate)),
YEAR(TODAY())-YEAR(Birthdate),(YEAR(TODAY())-YEAR(Birthdate))-1))</formula>
    <label>Age Today</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>