2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Annual_Leave_taken_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leave_taken_to_Date__c</fullName>
    <label>Annual Leave taken:</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>