2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Any_Relative_Acquaintance_in_Helutrans__c.field-meta.xml
<CustomField>
    <fullName>Any_Relative_Acquaintance_in_Helutrans__c</fullName>
    <label>Any Relative/Acquaintance in Helutrans?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>