2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Appearance__c.field-meta.xml
<CustomField>
    <fullName>Appearance__c</fullName>
    <label>Appearance</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>