2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/artAppE2__Collector_Id__c.field-meta.xml
<CustomField>
    <fullName>artAppE2__Collector_Id__c</fullName>
    <externalId>true</externalId>
    <label>Collector Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>