2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/artAppE2__IsTrigger__c.field-meta.xml
<CustomField>
    <fullName>artAppE2__IsTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTrigger</label>
    <type>Checkbox</type>
</CustomField>