2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/artAppE2__Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>artAppE2__Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>