2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/artAppE2__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>artAppE2__Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>