2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/artFair__c.field-meta.xml
<CustomField>
    <fullName>artFair__c</fullName>
    <label>ArtFair</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABHK16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>