2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Assignment_Term__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Term__c</fullName>
    <description>Term of Shipper&apos;s assignment in Singapore</description>
    <label>Assignment Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>