2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Assignments__c.field-meta.xml
<CustomField>
    <fullName>Assignments__c</fullName>
    <label>Assignments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>