2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Barcode_ID__c.field-meta.xml
<CustomField>
    <fullName>Barcode_ID__c</fullName>
    <label>Barcode ID</label>
    <length>19</length>
    <type>Text</type>
</CustomField>