2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Birthday_2wks_advance__c.field-meta.xml
<CustomField>
    <fullName>Birthday_2wks_advance__c</fullName>
    <formula>Birthday_Reminder__c - 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday 2wks advance</label>
    <type>Date</type>
</CustomField>