2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Birthday_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Reminder__c</fullName>
    <formula>Date(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate))</formula>
    <label>Birthday Reminder</label>
    <type>Date</type>
</CustomField>