2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Carpentry__c.field-meta.xml
<CustomField>
    <fullName>Carpentry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carpentry</label>
    <type>Checkbox</type>
</CustomField>