2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Carton_Jacket__c.field-meta.xml
<CustomField>
    <fullName>Carton_Jacket__c</fullName>
    <label>Carton Jacket</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>