2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Cash_on_hand__c.field-meta.xml
<CustomField>
    <fullName>Cash_on_hand__c</fullName>
    <defaultValue>&quot;HKD&quot;</defaultValue>
    <label>Cash on hand</label>
    <length>29</length>
    <type>Text</type>
</CustomField>