2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Category_HT__c.field-meta.xml
<CustomField>
    <fullName>Category_HT__c</fullName>
    <label>Category:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>HOD</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Asst manager</fullName>
                <label>Asst Manager</label>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>Operation Crew</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Carpenter</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>