2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Cessation_Date_HT__c.field-meta.xml
<CustomField>
    <fullName>Cessation_Date_HT__c</fullName>
    <label>Cessation Date:</label>
    <type>Date</type>
</CustomField>