2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Cessation_Reason_HT__c.field-meta.xml
<CustomField>
    <fullName>Cessation_Reason_HT__c</fullName>
    <label>Cessation Reason:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resigned</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Retrenched</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>