2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Client_s_Copy_Chop__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Copy_Chop__c</fullName>
    <label>Client&apos;s Copy Chop</label>
    <length>99</length>
    <type>Text</type>
</CustomField>