2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Communication_skills__c.field-meta.xml
<CustomField>
    <fullName>Communication_skills__c</fullName>
    <label>Communication skills</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>