2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Company_Chop__c.field-meta.xml
<CustomField>
    <fullName>Company_Chop__c</fullName>
    <label>Company Chop</label>
    <length>99</length>
    <type>Text</type>
</CustomField>