2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Compliance__c.field-meta.xml
<CustomField>
    <fullName>Compliance__c</fullName>
    <label>Compliance</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>