2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Computer__c.field-meta.xml
<CustomField>
    <fullName>Computer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Computer</label>
    <type>Checkbox</type>
</CustomField>