2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Confirmation_Date_HT__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Date_HT__c</fullName>
    <label>Confirmation Date:</label>
    <type>Date</type>
</CustomField>