2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Contact_No_HT__c.field-meta.xml
<CustomField>
    <fullName>Contact_No_HT__c</fullName>
    <label>Contact No:</label>
    <type>Phone</type>
</CustomField>