2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Contact_Person_HT__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_HT__c</fullName>
    <label>Contact Person:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>