2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Crate_2D__c.field-meta.xml
<CustomField>
    <fullName>Crate_2D__c</fullName>
    <label>Crate 2D</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>