2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Damage__c.field-meta.xml
<CustomField>
    <fullName>Damage__c</fullName>
    <label>Damage</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>