2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Date_H__c.field-meta.xml
<CustomField>
    <fullName>Date_H__c</fullName>
    <label>Date of Birth:</label>
    <type>Date</type>
</CustomField>