2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Department</description>
    <inlineHelpText>Department</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operation Crew - SG</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Registrar Crew</fullName>
            </value>
            <value>
                <fullName>Customer Service (Gallery)</fullName>
            </value>
            <value>
                <fullName>Customer Service (Museum)</fullName>
            </value>
            <value>
                <fullName>Customer Service (Special Project)</fullName>
            </value>
            <value>
                <fullName>Shipping Department</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>