2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Designation_HT__c.field-meta.xml
<CustomField>
    <fullName>Designation_HT__c</fullName>
    <label>Designation:</label>
    <length>100</length>
    <type>Text</type>
</CustomField>