2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <label>Discipline</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>