2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Do_you_own_a_car__c.field-meta.xml
<CustomField>
    <fullName>Do_you_own_a_car__c</fullName>
    <label>Do you own a car?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>