2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Driving_License_HT__c.field-meta.xml
<CustomField>
    <fullName>Driving_License_HT__c</fullName>
    <label>Driving License Details</label>
    <length>30</length>
    <type>Text</type>
</CustomField>