2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Duties_Responsibilities_HT__c.field-meta.xml
<CustomField>
    <fullName>Duties_Responsibilities_HT__c</fullName>
    <label>Duties &amp; Responsibilities:</label>
    <type>TextArea</type>
</CustomField>