2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Electrical__c.field-meta.xml
<CustomField>
    <fullName>Electrical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electrical</label>
    <type>Checkbox</type>
</CustomField>