2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Email_HT__c.field-meta.xml
<CustomField>
    <fullName>Email_HT__c</fullName>
    <label>Email:</label>
    <type>Email</type>
</CustomField>