2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Employee_No_HT__c.field-meta.xml
<CustomField>
    <fullName>Employee_No_HT__c</fullName>
    <label>Employee No:</label>
    <length>6</length>
    <type>Text</type>
</CustomField>