2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Employer_HT__c.field-meta.xml
<CustomField>
    <fullName>Employer_HT__c</fullName>
    <label>Employer:</label>
    <length>30</length>
    <type>Text</type>
</CustomField>