2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/English__c.field-meta.xml
<CustomField>
    <fullName>English__c</fullName>
    <label>English</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>