2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Expected_Salary_HT__c.field-meta.xml
<CustomField>
    <fullName>Expected_Salary_HT__c</fullName>
    <label>Expected Salary</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>