2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/FCCS__c.field-meta.xml
<CustomField>
    <fullName>FCCS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>French Chamber of Commerce Singapore</description>
    <label>FCCS</label>
    <type>Checkbox</type>
</CustomField>