2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Fee__c.field-meta.xml
<CustomField>
    <fullName>Fee__c</fullName>
    <label>Fee</label>
    <length>30</length>
    <type>Text</type>
</CustomField>