2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Forklift__c.field-meta.xml
<CustomField>
    <fullName>Forklift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forklift</label>
    <type>Checkbox</type>
</CustomField>