2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Gender_HT__c.field-meta.xml
<CustomField>
    <fullName>Gender_HT__c</fullName>
    <label>Gender:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>