2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Gross_Monthly_Salary__c.field-meta.xml
<CustomField>
    <fullName>Gross_Monthly_Salary__c</fullName>
    <label>Gross Monthly Salary:</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>