2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Handle_2D__c.field-meta.xml
<CustomField>
    <fullName>Handle_2D__c</fullName>
    <label>Handle 2D</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>