2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Handphone_Allowance_HT__c.field-meta.xml
<CustomField>
    <fullName>Handphone_Allowance_HT__c</fullName>
    <label>Handphone Allowance:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>