2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Hire_Date_HT__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date_HT__c</fullName>
    <label>Hire Date:</label>
    <type>Date</type>
</CustomField>