2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/History_of_conviction_in_Court_of_Law__c.field-meta.xml
<CustomField>
    <fullName>History_of_conviction_in_Court_of_Law__c</fullName>
    <label>History of conviction in Court of Law</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>