2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/HOD__c.field-meta.xml
<CustomField>
    <fullName>HOD__c</fullName>
    <label>HOD</label>
    <length>250</length>
    <type>Text</type>
</CustomField>