2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Home_No_HT__c.field-meta.xml
<CustomField>
    <fullName>Home_No_HT__c</fullName>
    <label>Home No:</label>
    <type>Phone</type>
</CustomField>