2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/HR_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>HR_Decision_Maker__c</fullName>
    <description>HR Decision Maker in Company</description>
    <label>HR Decision Maker</label>
    <length>100</length>
    <type>Text</type>
</CustomField>