2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/HR_Decision_Maker_Details__c.field-meta.xml
<CustomField>
    <fullName>HR_Decision_Maker_Details__c</fullName>
    <description>Any forms of contact for the HR Decision Maker</description>
    <label>HR Decision Maker Details</label>
    <type>TextArea</type>
</CustomField>