2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/ID_No_HT__c.field-meta.xml
<CustomField>
    <fullName>ID_No_HT__c</fullName>
    <label>ID No:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>