2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/ID_Type_HT__c.field-meta.xml
<CustomField>
    <fullName>ID_Type_HT__c</fullName>
    <label>ID Type:</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NRIC (Pink)</fullName>
            </value>
            <value>
                <fullName>NRIC (Blue)</fullName>
            </value>
            <value>
                <fullName>FIN</fullName>
            </value>
            <value>
                <fullName>HKID</fullName>
            </value>
            <value>
                <fullName>RIC (China</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>