2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/If_YES_state_details_HT__c.field-meta.xml
<CustomField>
    <fullName>If_YES_state_details_HT__c</fullName>
    <label>If YES, state details:</label>
    <type>TextArea</type>
</CustomField>