2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/If_YES_state_name_HT__c.field-meta.xml
<CustomField>
    <fullName>If_YES_state_name_HT__c</fullName>
    <label>If YES, state name:</label>
    <length>20</length>
    <type>Text</type>
</CustomField>