2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if contact has left the Account -&gt; Contact details are inactive.
If contact has moved to new Account, Create new contact in that Account</description>
    <inlineHelpText>Check this if contact has left the Account -&gt; Contact details are inactive.
If contact has moved to new Account, Create new contact in that Account</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>