2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Job_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Visit_Date__c</fullName>
    <label>Job Visit Date</label>
    <type>DateTime</type>
</CustomField>