2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>99</length>
    <type>Text</type>
</CustomField>