2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Kid_s_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Kid_s_Name_s__c</fullName>
    <label>Kid(s) Name(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>