2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Languages_Spoken_Written_HT__c.field-meta.xml
<CustomField>
    <fullName>Languages_Spoken_Written_HT__c</fullName>
    <label>Languages Spoken &amp; Written:</label>
    <type>TextArea</type>
</CustomField>