2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Last_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Review__c</fullName>
    <label>Last Review</label>
    <type>Date</type>
</CustomField>