2nd training/Community/Community/Community1/force-app/main/default/objects/Contact/fields/Length_of_Service_HT__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Service_HT__c</fullName>
    <formula>TODAY() -  Hire_Date_HT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Service:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>